fixed element spacing for main daily weather container

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -433,102 +433,6 @@ form p {
   position: relative;
 }
 
-.dailyWeatherCtn {
-  width: 65%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.location {
-  display: flex;
-  align-items: center;
-  padding-bottom: 1rem;
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
-}
-
-.location h2 {
-  font-size: 1.75rem;
-  font-weight: 500;
-  text-decoration: underline gray dashed;
-  text-underline-offset: 8px;
-  text-decoration-thickness: 4px;
-}
-
-.location i {
-  color: var(--secGrey);
-  font-size: 2.25rem;
-  margin-right: 0.5rem;
-}
-
-.ctn1 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 67.5%;
-  border-radius: 1rem;
-}
-
-.dailyMainInfo {
-  display: flex;
-  width: 78%;
-  height: 100%;
-  background-color: var(--terBlue);
-  border-radius: 1rem;
-}
-
-.mainWeatherText {
-  width: 50%;
-  padding: 1.5rem 0 1.5rem 1.5rem;
-}
-
-.date {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.mainWeatherText h3 {
-  font-weight: 600;
-  color: var(--priBlue);
-  text-transform: uppercase;
-  letter-spacing: 0.05rem;
-  font-size: 2.5rem;
-}
-
-.temps {
-  display: flex;
-  align-items: center;
-  padding: 0.6rem 0;
-}
-
-.mainTemp {
-  font-size: 4rem;
-  font-weight: 700;
-  margin-right: 1rem;
-}
-
-.HLtemp {
-  color: var(--priBlue);
-  font-weight: 500;
-}
-
-.HLtemp p {
-  font-size: 1rem;
-}
-
-.feelsLikeTemp {
-  font-weight: 500;
-  color: var(--priBlue);
-}
-
-.imgMainCtn {
-  width: 50%;
-  height: 100%;
-  text-align: center;
-  padding: 3rem 2rem 0 0;
-}
-
 .tempToggleCtn {
   background-color: var(--priBlue);
   width: 5.35rem;
@@ -556,12 +460,109 @@ form p {
   transition: all 0.5s ease-in;
 }
 
+.dailyWeatherCtn {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.location {
+  display: flex;
+  align-items: center;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+}
+
+.location h2 {
+  font-size: 1.95rem;
+  font-weight: 500;
+  text-decoration: underline gray dashed;
+  text-underline-offset: 8px;
+  text-decoration-thickness: 4px;
+}
+
+.location i {
+  color: var(--secGrey);
+  font-size: 2.25rem;
+  margin-right: 0.5rem;
+}
+
+.ctn1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 66%;
+  border-radius: 1rem;
+}
+
+.dailyMainInfo {
+  display: flex;
+  width: 78%;
+  height: 100%;
+  background-color: var(--terBlue);
+  border-radius: 1rem;
+}
+
+.mainWeatherText {
+  width: 50%;
+  padding: 1.5rem 0 1.5rem 1.5rem;
+}
+
+.date {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.mainWeatherText h3 {
+  font-weight: 600;
+  color: var(--priBlue);
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+  font-size: 2.75rem;
+}
+
+.temps {
+  display: flex;
+  align-items: center;
+}
+
+.mainTemp {
+  font-size: 4rem;
+  font-weight: 700;
+  margin-right: 1rem;
+  padding: 1rem 0;
+}
+
+.HLtemp {
+  color: var(--priBlue);
+  font-weight: 500;
+}
+
+.HLtemp p {
+  font-size: 1rem;
+}
+
+.feelsLikeTemp {
+  font-weight: 500;
+  color: var(--priBlue);
+}
+
+.imgMainCtn {
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  padding: 1.5rem;
+  margin-top: 3rem;
+  margin-right: 1rem;
+}
+
 .imgCtn {
   height: 70%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 2rem;
 }
 
 .imgCtn img {
@@ -623,7 +624,7 @@ form p {
 .ctn3 {
   display: flex;
   justify-content: space-between;
-  height: 30%;
+  height: 31%;
   border-radius: 1rem;
   padding: 1rem;
   background-color: var(--priBlue);
